--- a/src/theme-verano.css
+++ b/src/theme-verano.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   min-height: 100%;
   padding: 0;
@@ -79,12 +80,12 @@ nav a.brand-logo {
 }
 
 .msj-good {
-  background: #009D06;
+  background: #009d06;
   color: white;
 }
 
 .msj-bad {
-  background: #E84727;
+  background: #e84727;
   color: white;
 }
 
@@ -100,7 +101,7 @@ nav a.brand-logo {
 }
 
 a {
-  color: #E84727;
+  color: #e84727;
 }
 
 .relative {
@@ -196,7 +197,7 @@ a {
   line-height: 1;
 }
 .header-page-mod .label-profile {
-  background: #E8E8E8;
+  background: #e8e8e8;
   font-size: 9pt;
   padding: 0.3em 0.8em;
   border-radius: 4px;
@@ -206,7 +207,7 @@ a {
   display: block;
   width: 50px;
   height: 50px;
-  background: #2788E8;
+  background: #2788e8;
   border-radius: 6px;
   color: white;
   padding: 0.9em 0.8em;
@@ -225,43 +226,43 @@ footer {
 }
 
 .card-color1:hover {
-  border: 1px solid #E84727 !important;
+  border: 1px solid #e84727 !important;
 }
 .card-color1 .cont-icon i {
-  color: #E84727 !important;
+  color: #e84727 !important;
 }
 .card-color1 .divisor-line {
-  background: #E84727 !important;
+  background: #e84727 !important;
 }
 
 .card-color2:hover {
-  border: 1px solid #0490BC !important;
+  border: 1px solid #0490bc !important;
 }
 .card-color2 .cont-icon i {
-  color: #0490BC !important;
+  color: #0490bc !important;
 }
 .card-color2 .divisor-line {
-  background: #0490BC !important;
+  background: #0490bc !important;
 }
 
 .card-color3:hover {
-  border: 1px solid #59777D !important;
+  border: 1px solid #59777d !important;
 }
 .card-color3 .cont-icon i {
-  color: #59777D !important;
+  color: #59777d !important;
 }
 .card-color3 .divisor-line {
-  background: #59777D !important;
+  background: #59777d !important;
 }
 
 .card-color4:hover {
-  border: 1px solid #2788E8 !important;
+  border: 1px solid #2788e8 !important;
 }
 .card-color4 .cont-icon i {
-  color: #2788E8 !important;
+  color: #2788e8 !important;
 }
 .card-color4 .divisor-line {
-  background: #2788E8 !important;
+  background: #2788e8 !important;
 }
 
 .card-module {
@@ -275,10 +276,10 @@ footer {
   margin-bottom: 1.5em;
 }
 .card-module:hover {
-  border: 1px solid #E84727;
+  border: 1px solid #e84727;
 }
 .card-module:hover .btn-small {
-  background: #E84727 !important;
+  background: #e84727 !important;
   color: white !important;
 }
 .card-module .cont-icon-card {
@@ -303,7 +304,7 @@ footer {
 .card-module .cont-dots .dot {
   width: 5px;
   height: 5px;
-  background: #CECECE;
+  background: #cecece;
   border-radius: 1em;
   display: inline-block;
   vertical-align: middle;
@@ -557,7 +558,12 @@ footer {
   text-align: center;
   background: #e84727;
   background: -moz-linear-gradient(top, #e84727 0%, #e88e27 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, #e84727), color-stop(100%, #e88e27));
+  background: -webkit-gradient(
+    left top,
+    left bottom,
+    color-stop(0%, #e84727),
+    color-stop(100%, #e88e27)
+  );
   background: -webkit-linear-gradient(top, #e84727 0%, #e88e27 100%);
   background: -o-linear-gradient(top, #e84727 0%, #e88e27 100%);
   background: -ms-linear-gradient(top, #e84727 0%, #e88e27 100%);
@@ -565,7 +571,7 @@ footer {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#e84727", endColorstr="#e88e27", GradientType=0 );
 }
 .head-new-element .btn-color-2 {
-  background: #0490BC;
+  background: #0490bc;
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -577,7 +583,7 @@ footer {
   text-align: center;
 }
 .head-new-element .btn-color-3 {
-  background: #59777D;
+  background: #59777d;
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -589,7 +595,7 @@ footer {
   text-align: center;
 }
 .head-new-element .btn-color-4 {
-  background: #2788E8;
+  background: #2788e8;
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -608,15 +614,15 @@ hr {
 }
 
 .card-color-2 .view-details-access .cont-acsess a {
-  color: #0490BC !important;
+  color: #0490bc !important;
 }
 
 .card-color-3 .view-details-access .cont-acsess a {
-  color: #59777D !important;
+  color: #59777d !important;
 }
 
 .card-color-4 .view-details-access .cont-acsess a {
-  color: #2788E8 !important;
+  color: #2788e8 !important;
 }
 
 .verano-card {
@@ -643,12 +649,12 @@ hr {
 .verano-card .cont-status-indicator .indicator-status {
   width: 60px;
   height: 8px;
-  background: #E84727;
+  background: #e84727;
   border-bottom-right-radius: 3em;
   border-top-left-radius: 12px;
 }
 .verano-card .cont-status-indicator .active-record {
-  background: #009D06;
+  background: #009d06;
 }
 .verano-card .head-card {
   display: flex;
@@ -684,7 +690,7 @@ hr {
   border-radius: 100%;
   padding: 0.5em 0.4em;
   text-align: center;
-  color: #6E6E6E;
+  color: #6e6e6e;
 }
 .verano-card .head-card .btn-options:hover {
   background: #f7f7f7;
@@ -713,11 +719,11 @@ hr {
   font-size: 10.3pt;
 }
 .verano-card .segment-info-v .value .green-text {
-  color: #009D06;
+  color: #009d06;
   font-weight: bold;
 }
 .verano-card .segment-info-v .value .red-text {
-  color: #E84727;
+  color: #e84727;
   font-weight: bold;
 }
 .verano-card .segment-partition {
@@ -1074,7 +1080,7 @@ a.active {
 }
 
 .t-success {
-  color: #009D06;
+  color: #009d06;
 }
 
 .title-1 {
@@ -1130,28 +1136,40 @@ textarea {
 @font-face {
   font-family: "Proxima Nova Bold";
   src: url("./font/ProximaNova-Bold.eot");
-  src: url("./font/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("./font/ProximaNova-Bold.woff2") format("woff2"), url("./font/ProximaNova-Bold.woff") format("woff"), url("./font/ProximaNova-Bold.ttf") format("truetype");
+  src: url("./font/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"),
+    url("./font/ProximaNova-Bold.woff2") format("woff2"),
+    url("./font/ProximaNova-Bold.woff") format("woff"),
+    url("./font/ProximaNova-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
   font-family: "Proxima Nova Light";
   src: url("./font/ProximaNova-Light.eot");
-  src: url("./font/ProximaNova-Light.eot?#iefix") format("embedded-opentype"), url("./font/ProximaNova-Light.woff2") format("woff2"), url("./font/ProximaNova-Light.woff") format("woff"), url("./font/ProximaNova-Light.ttf") format("truetype");
+  src: url("./font/ProximaNova-Light.eot?#iefix") format("embedded-opentype"),
+    url("./font/ProximaNova-Light.woff2") format("woff2"),
+    url("./font/ProximaNova-Light.woff") format("woff"),
+    url("./font/ProximaNova-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: "Proxima Nova Regular";
   src: url("./font/ProximaNova-Regular.eot");
-  src: url("./font/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("./font/ProximaNova-Regular.woff2") format("woff2"), url("./font/ProximaNova-Regular.woff") format("woff"), url("./font/ProximaNova-Regular.ttf") format("truetype");
+  src: url("./font/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"),
+    url("./font/ProximaNova-Regular.woff2") format("woff2"),
+    url("./font/ProximaNova-Regular.woff") format("woff"),
+    url("./font/ProximaNova-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Proxima Nova Semibold";
   src: url("./font/ProximaNova-Semibold.eot");
-  src: url("./font/ProximaNova-Semibold.eot?#iefix") format("embedded-opentype"), url("./font/ProximaNova-Semibold.woff2") format("woff2"), url("./font/ProximaNova-Semibold.woff") format("woff"), url("./font/ProximaNova-Semibold.ttf") format("truetype");
+  src: url("./font/ProximaNova-Semibold.eot?#iefix") format("embedded-opentype"),
+    url("./font/ProximaNova-Semibold.woff2") format("woff2"),
+    url("./font/ProximaNova-Semibold.woff") format("woff"),
+    url("./font/ProximaNova-Semibold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
@@ -1170,7 +1188,7 @@ textarea {
   border-top-right-radius: 10em;
   border-bottom-right-radius: 10em;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.09);
-  border: 1px solid #E6E6E6;
+  border: 1px solid #e6e6e6;
   z-index: 3;
 }
 #custom-navigator #slot-logo::after {
@@ -1181,7 +1199,7 @@ textarea {
   height: 60px;
   left: 0.9em;
   top: 0.7em;
-  background: #EFEFEF;
+  background: #efefef;
   z-index: 0;
 }
 #custom-navigator #slot-logo img {
@@ -1194,7 +1212,7 @@ textarea {
   background: white;
   top: 30%;
   border-radius: 5px;
-  border: 1px solid #E6E6E6;
+  border: 1px solid #e6e6e6;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -1366,7 +1384,9 @@ textarea {
   }
 }
 @media screen and (max-width: 375px) {
-  #modalForgotPassword, #modalFormProggraming, .verano-modal {
+  #modalForgotPassword,
+  #modalFormProggraming,
+  .verano-modal {
     width: 95%;
   }
 
@@ -1408,7 +1428,9 @@ textarea {
   }
 }
 @media (min-width: 376px) and (max-width: 600px) {
-  #modalForgotPassword, #modalFormProggraming, .verano-modal {
+  #modalForgotPassword,
+  #modalFormProggraming,
+  .verano-modal {
     width: 90%;
   }
 
@@ -1439,7 +1461,9 @@ textarea {
   }
 }
 @media (min-width: 601px) and (max-width: 992px) {
-  #modalForgotPassword, #modalFormProggraming, .verano-modal {
+  #modalForgotPassword,
+  #modalFormProggraming,
+  .verano-modal {
     width: 60%;
   }
 
@@ -1465,7 +1489,9 @@ textarea {
   }
 }
 @media (min-width: 993px) and (max-width: 1200px) {
-  #modalForgotPassword, #modalFormProggraming, .verano-modal {
+  #modalForgotPassword,
+  #modalFormProggraming,
+  .verano-modal {
     width: 45%;
   }
 
