--- a/src/theme-verano.css
+++ b/src/theme-verano.css
@@ -288,7 +288,7 @@ footer {
 .card-module .cont-icon-card .circle-frame {
   width: 50px;
   height: 50px;
-  background: #eee;
+  /* background: #eee; */
   overflow: hidden;
   margin: 0 auto;
   border-radius: 4px;
